--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@tanstack/react-query": "^5.61.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
