--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
