--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "react": "^18.3.1",
