--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
+    "i18next": "^24.2.0",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-lottie": "^1.2.10",
