--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "embla-carousel-react": "^8.5.1",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
